--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -15,8 +15,13 @@ body {
     height: 3000px;
 }
 
-h1, h2, h3 {
+h1, h2 {
     letter-spacing: 14px;
+    font-weight: 300;
+}
+
+h3 {
+    font-weight: 400;
 }
 
 p {
@@ -37,6 +42,7 @@ ul {
 
     margin-top: 100px;
     flex-direction: column;
+    margin-bottom: 60px;
 
     img {
         font-size: 30px;
