--- a/scss/index.scss
+++ b/scss/index.scss
@@ -8,7 +8,9 @@
 
 @import "./components/header";
 
-@import "./components/servioces";
+@import "./components/services";
+
+@import "./components/buttons";
 
 @import "./pages/HomePage";
 
