--- a/scss/components/_services.scss
+++ b/scss/components/_services.scss
@@ -66,3 +66,24 @@ section.services {
         }
     }
 }
+
+div.under_services{
+    background-color: var(--bg-color-2);
+    padding: 100px 0;
+    .container-grid{
+        gap: 30px;
+
+        .card{
+            background-color: white;
+            h3{
+                margin-bottom: 0;
+                transform: scaleY(.8);
+                letter-spacing: 2px;
+            }
+            p{
+                margin-top: -8px;
+                transform: scaleY(.8);
+            }
+        }
+    }
+}
