--- a/scss/layout/_container.scss
+++ b/scss/layout/_container.scss
@@ -15,7 +15,8 @@
         }
 
         @media (min-width: $MinMediumScreen) {
-            grid-template-columns: repeat(auto-fill, minmax(25%, 1fr));
+            //grid-template-columns: repeat(auto-fill, minmax(25%, 1fr));
+            grid-template-columns: repeat(4, 1fr);
         }
     }
 }
