Created over_portfolio section

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -6,11 +6,12 @@
 
 @import "./layout/container";
 
-@import "./components/header";
-
-@import "./components/services";
-
 @import "./components/buttons";
+
+@import "./components/header";
+@import "./components/services";
+@import "./components/portfolio";
+
 
 @import "./pages/HomePage";
 
