--- a/css/index.css
+++ b/css/index.css
@@ -150,6 +150,25 @@ ul {
     .container-grid {
       grid-template-columns: repeat(4, 1fr); } }
 
+/*============ BUTTONS ==================*/
+.button-1 {
+  outline: none;
+  border: 1px solid var(--bg-color-1);
+  background-color: var(--bg-color-1);
+  letter-spacing: 4px;
+  font-size: 10px;
+  font-weight: 500;
+  margin-top: 34px;
+  padding: 13px 25px;
+  cursor: pointer;
+  -moz-transition: background-color 0.5s;
+  -o-transition: background-color 0.5s;
+  -ms-transition: background-color 0.5s;
+  -webkit-transition: background-color 0.5s; }
+  .button-1:hover {
+    background-color: transparent;
+    color: white; }
+
 header.header {
   width: 100%;
   height: 600px;
@@ -368,23 +387,22 @@ div.under_services {
         margin-top: -8px;
         transform: scaleY(0.8); }
 
-/*============ BUTTONS ==================*/
-.button-1 {
-  outline: none;
-  border: 1px solid var(--bg-color-1);
-  background-color: var(--bg-color-1);
-  letter-spacing: 4px;
-  font-size: 10px;
-  font-weight: 500;
-  margin-top: 34px;
-  padding: 13px 25px;
-  cursor: pointer;
-  -moz-transition: background-color 0.5s;
-  -o-transition: background-color 0.5s;
-  -ms-transition: background-color 0.5s;
-  -webkit-transition: background-color 0.5s; }
-  .button-1:hover {
-    background-color: transparent;
-    color: white; }
+.portfolio {
+  margin-bottom: 100px; }
+  .portfolio .over_portfolio {
+    display: flex;
+    justify-content: space-evenly;
+    gap: 40px; }
+    .portfolio .over_portfolio > div:not(:nth-of-type(2)) {
+      display: flex;
+      width: calc((100% - 169px) / 2);
+      justify-content: space-evenly;
+      border-top: 2px solid var(--bg-color-2);
+      border-bottom: 2px solid var(--bg-color-2); }
+    @media (max-width: 992px) {
+      .portfolio .over_portfolio {
+        flex-direction: column; }
+        .portfolio .over_portfolio > div:not(:nth-of-type(2)) {
+          width: 100%; } }
 
 /*# sourceMappingURL=index.css.map */
