created video section

--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -17,3 +17,12 @@
     color: white;
   }
 }
+
+.button-2{
+  @extend .button-1;
+  border: var(--bg-color-1);
+  background-color: transparent;
+  &:hover{
+    background-color: var(--bg-color-1);
+  }
+}
