--- a/css/index.css
+++ b/css/index.css
@@ -33,7 +33,7 @@
 
 body {
   font-family: 'Work Sans', sans-serif;
-  height: 3000px; }
+  height: 5000px; }
 
 h1, h2 {
   letter-spacing: 14px;
@@ -151,7 +151,7 @@ ul {
       grid-template-columns: repeat(4, 1fr); } }
 
 /*============ BUTTONS ==================*/
-.button-1 {
+.button-1, .button-2 {
   outline: none;
   border: 1px solid var(--bg-color-1);
   background-color: var(--bg-color-1);
@@ -166,9 +166,15 @@ ul {
   -o-transition: background-color 0.5s;
   -ms-transition: background-color 0.5s;
   -webkit-transition: background-color 0.5s; }
-  .button-1:hover {
+  .button-1:hover, .button-2:hover {
     background-color: transparent;
     color: white; }
+
+.button-2 {
+  border: var(--bg-color-1);
+  background-color: transparent; }
+  .button-2:hover {
+    background-color: var(--bg-color-1); }
 
 header.header {
   width: 100%;
@@ -396,7 +402,6 @@ div.under_services {
         transform: scaleY(0.8); }
 
 #portfolio {
-  margin-bottom: 100px;
   text-align: center; }
   #portfolio .over_portfolio {
     display: flex;
@@ -463,5 +468,33 @@ div.under_services {
   #portfolio > button {
     margin: 70px 0;
     color: black; }
+
+.video {
+  width: 100%;
+  height: 300px;
+  overflow: hidden;
+  position: relative; }
+  .video video {
+    width: 100%; }
+  .video .button-2 {
+    border: 2px solid var(--bg-color-1);
+    background-color: transparent;
+    color: var(--bg-color-1);
+    position: absolute;
+    top: 44%;
+    left: 50%;
+    transform: translate(-50%);
+    margin-top: 0;
+    padding: 20px 40px;
+    letter-spacing: 8px;
+    font-weight: 500; }
+    .video .button-2:hover {
+      background-color: var(--bg-color-1);
+      color: white; }
+    @media (max-width: 577px) {
+      .video .button-2 {
+        top: 20%;
+        font-size: 8px;
+        width: max-content; } }
 
 /*# sourceMappingURL=index.css.map */
