--- a/css/index.css
+++ b/css/index.css
@@ -497,4 +497,29 @@ div.under_services {
         font-size: 8px;
         width: max-content; } }
 
+@media (max-width: 577px) {
+  .our_team .text-head {
+    margin-top: 48px; } }
+@media (max-width: 391px) {
+  .our_team .text-head {
+    margin-top: -40px; } }
+.our_team .cards {
+  gap: 30px; }
+  .our_team .cards .card {
+    position: relative;
+    box-shadow: 0 0 10px 0 gainsboro; }
+    .our_team .cards .card img {
+      width: 100%;
+      height: 350px;
+      filter: grayscale(100%); }
+    .our_team .cards .card::after {
+      content: attr(data-name);
+      background-color: rgba(255, 230, 0, 0.66);
+      width: 100%;
+      /* height: 50px; */
+      position: absolute;
+      top: 56%;
+      left: 0;
+      padding: 18px 0; }
+
 /*# sourceMappingURL=index.css.map */
