--- a/scss/index.scss
+++ b/scss/index.scss
@@ -11,6 +11,7 @@
 @import "./components/header";
 @import "./components/services";
 @import "./components/portfolio";
+@import "./components/our_team";
 
 
 @import "./pages/HomePage";
