--- a/css/index.css
+++ b/css/index.css
@@ -497,29 +497,85 @@ div.under_services {
         font-size: 8px;
         width: max-content; } }
 
-@media (max-width: 577px) {
-  .our_team .text-head {
-    margin-top: 48px; } }
-@media (max-width: 391px) {
-  .our_team .text-head {
-    margin-top: -40px; } }
-.our_team .cards {
-  gap: 30px; }
-  .our_team .cards .card {
+.our_team {
+  margin-bottom: 50px; }
+  @media (max-width: 577px) {
+    .our_team .text-head {
+      margin-top: 48px; } }
+  @media (max-width: 391px) {
+    .our_team .text-head {
+      margin-top: -40px; } }
+  .our_team .cards {
+    gap: 30px; }
+    .our_team .cards .card {
+      position: relative;
+      box-shadow: 0 0 10px 0 gainsboro; }
+      .our_team .cards .card img {
+        width: 100%;
+        height: 350px;
+        filter: grayscale(100%); }
+      .our_team .cards .card::after {
+        content: attr(data-name);
+        background-color: rgba(255, 230, 0, 0.66);
+        width: 100%;
+        /* height: 50px; */
+        position: absolute;
+        top: 56%;
+        left: 0;
+        padding: 18px 0; }
+
+#under_team {
+  display: flex;
+  margin-top: 22%; }
+  @media (max-width: 992px) {
+    #under_team {
+      margin-top: 30%; } }
+  @media (max-width: 400px) {
+    #under_team {
+      margin-top: 70%; } }
+  @media (max-width: 316px) {
+    #under_team {
+      margin-top: 114%; } }
+  #under_team .under_team {
     position: relative;
-    box-shadow: 0 0 10px 0 gainsboro; }
-    .our_team .cards .card img {
-      width: 100%;
-      height: 350px;
-      filter: grayscale(100%); }
-    .our_team .cards .card::after {
-      content: attr(data-name);
-      background-color: rgba(255, 230, 0, 0.66);
-      width: 100%;
-      /* height: 50px; */
+    height: 180px;
+    width: 100%;
+    background-color: var(--bg-color-1); }
+    #under_team .under_team .container-flex, #under_team .under_team .text-head {
+      gap: 30px;
+      flex-wrap: nowrap;
       position: absolute;
-      top: 56%;
-      left: 0;
-      padding: 18px 0; }
+      top: -135%; }
+      @media (max-width: 992px) {
+        #under_team .under_team .container-flex, #under_team .under_team .text-head {
+          flex-direction: column;
+          position: initial; } }
+      #under_team .under_team .container-flex .item, #under_team .under_team .text-head .item {
+        width: 50%;
+        display: flex;
+        height: 650px;
+        justify-content: space-around; }
+        @media (max-width: 992px) {
+          #under_team .under_team .container-flex .item, #under_team .under_team .text-head .item {
+            flex-direction: column;
+            width: 100%; } }
+        #under_team .under_team .container-flex .item:first-of-type, #under_team .under_team .text-head .item:first-of-type {
+          flex-direction: column; }
+          #under_team .under_team .container-flex .item:first-of-type > p, #under_team .under_team .text-head .item:first-of-type > p {
+            background-color: var(--bg-color-2);
+            padding: 60px;
+            text-align: left; }
+          #under_team .under_team .container-flex .item:first-of-type h5, #under_team .under_team .text-head .item:first-of-type h5 {
+            text-align: left; }
+        #under_team .under_team .container-flex .item:last-of-type, #under_team .under_team .text-head .item:last-of-type {
+          flex-direction: column-reverse; }
+          #under_team .under_team .container-flex .item:last-of-type > img, #under_team .under_team .text-head .item:last-of-type > img {
+            height: 322px;
+            width: 100%; }
+          #under_team .under_team .container-flex .item:last-of-type h5, #under_team .under_team .text-head .item:last-of-type h5 {
+            text-align: right; }
+          @media (max-width: 992px) {
+            #under_team .under_team .container-flex .item:last-of-type, #under_team .under_team .text-head .item:last-of-type {
+              flex-direction: column; } }
 
 /*# sourceMappingURL=index.css.map */
