--- a/scss/components/our_team.scss
+++ b/scss/components/our_team.scss
@@ -54,7 +54,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  
+  position: relative;
   @media (max-width: $MinMediumScreen) {
     height: 1200px;
   }
@@ -106,4 +106,22 @@
       }
     }
   }
+
+  &::before{
+    content: '';
+    width: 100%;
+    height: 200px;
+    position: absolute;
+    background-color: var(--bg-color-1);
+    top: 52%;
+    transform: translateY(-50%);
+    @media (max-width: $MinLargeScreen) {
+      top: 57%;
+    }
+    @media (max-width: $MinMediumScreen) {
+      content: none;
+    }
+  }
+
+
 }
