solving some problems

--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,7 +1,7 @@
 header.header {
     width: 100%;
     height: 600px;
-    background-image: url("../../images/header.jpg");
+    background-image: url("../images/header.jpg");
     padding-top: 1.5rem;
     background-size: cover;
 
