--- a/css/index.css
+++ b/css/index.css
@@ -179,7 +179,7 @@ ul {
 header.header {
   width: 100%;
   height: 600px;
-  background-image: url("../../images/header.jpg");
+  background-image: url("../images/header.jpg");
   padding-top: 1.5rem;
   background-size: cover;
   position: relative;
