--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,7 +1,10 @@
+/*============ HEADER ==================*/
+
 header.header {
     width: 100%;
     height: 600px;
-    background-image: url("../images/header.jpg");
+    $ImgURL:"../images/header.jpg";
+    background-image: url($ImgURL);
     padding-top: 1.5rem;
     background-size: cover;
 
@@ -175,3 +178,4 @@ header.header {
     }
 
 }
+
