--- a/scss/components/_our_team.scss
+++ b/scss/components/_our_team.scss
@@ -1,3 +1,6 @@
+/*============ OUR TEAM ==================*/
+
+
 .our_team{
   margin-bottom: 50px;
   .text-head{
@@ -122,6 +125,4 @@
       content: none;
     }
   }
-
-
 }
