--- a/scss/components/_portfolio.scss
+++ b/scss/components/_portfolio.scss
@@ -1,3 +1,5 @@
+/*============ PORTFOLIO ==================*/
+
 #portfolio{
   //margin-bottom: 100px;
   text-align: center;
@@ -109,3 +111,4 @@
   }
 
 }
+
