--- a/scss/components/_services.scss
+++ b/scss/components/_services.scss
@@ -1,3 +1,6 @@
+/*============ SERVICES ==================*/
+
+
 section.services {
     background-color: var(--bg-color-3);
     padding-top: 1px;
@@ -87,3 +90,4 @@ div.under_services{
         }
     }
 }
+
