--- a/scss/config/_variables.scss
+++ b/scss/config/_variables.scss
@@ -1,8 +1,9 @@
-$bgColor-1: #ffe600;
+$bgColor-1: rgb(255, 230, 0);
 $bgColor-2: #1c1c1c;
-$bgColor-3: #F4F4F4;
-$TextHeadColor: #8f8f8f;
+$bgColor-3: rgb(244, 244, 244);
+$TextHeadColor: rgb(143, 143, 143);
 $TextColor: #838383;
+
 
 $MaxSmallScreen: 577px;
 $MinSmallScreen: 578px;
