--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -3,7 +3,9 @@
 header.header {
     width: 100%;
     height: 600px;
-    $ImgURL:"../images/header.jpg";
+
+    $ImgURL: "../images/header.jpg";
+
     background-image: url($ImgURL);
     padding-top: 1.5rem;
     background-size: cover;
@@ -16,6 +18,7 @@ header.header {
         top: 0;
         padding-top: .75rem;
         padding-bottom: .75rem;
+
         /*background-color: #00000029;*/
         box-shadow: none;
 
@@ -28,6 +31,19 @@ header.header {
         &__img {
             height: 3.5rem;
             cursor: pointer;
+        }
+
+        &__icons {
+            display: flex;
+            align-items: center;
+            width: 6%;
+            justify-content: space-between;
+
+            i[class*="toggle"] {
+                color: white;
+                font-size: 21px;
+                cursor: pointer;
+            }
         }
 
         &__icon {
@@ -51,12 +67,15 @@ header.header {
             overflow-y: hidden;
             border-bottom-right-radius: 20px;
             border-bottom-left-radius: 20px;
+
             @include prefixes(transition, height 0.3s);
+
             .nav__item {
                 padding-top: 1.5rem;
                 padding-bottom: 1.5rem;
                 text-align: center;
                 max-width: 68px;
+
                 @include prefixes(transition, max-width 0.3s);
 
                 &:hover {
@@ -71,22 +90,23 @@ header.header {
                 }
             }
         }
-        &__list.show{
+
+        &__list.show {
             height: 375px;
         }
+
         &__list.show {
             display: flex;
             border-top: 1px solid var(--bg-color-1);
         }
     }
-    .nav.toggle_nav{
+
+    .nav.toggle_nav {
         box-shadow: 0px 2px 6px 0px grey;
         background-color: var(--bg-color-2);
-
     }
 
-
-    .head{
+    .head {
         width: 100%;
         height: 300px;
         color: white;
@@ -98,62 +118,73 @@ header.header {
         font-weight: 100;
         text-align: center;
         line-height: 1.5;
-        h2{
+
+        h2 {
             font-weight: 100;
             margin-bottom: -10px;
         }
     }
 
-    .bottom-arrow{
+    .bottom-arrow {
         position: absolute;
         left: 50%;
         height: 65px;
         bottom: 16px;
         cursor: pointer;
-        @include prefixes(transform,translateX(-50%));
+
+        @include prefixes(transform, translateX(-50%));
+
         z-index: -1;
-        > img{
+
+        > img {
             width: 32px;
         }
 
-        .arrows{
+        .arrows {
             text-align: center;
             color: white;
             position: relative;
 
-            .arrow span{
+            .arrow span {
                 height: 20px;
                 width: 2px;
                 background-color: white;
                 position: absolute;
-
             }
-            .arrow:first-of-type{
-                >span{
+
+            .arrow:first-of-type {
+                > span {
                     top: 7px;
                     height: 11px;
                 }
-                span:first-of-type{
+
+                span:first-of-type {
                     @include prefixes(transform, rotateZ(-45deg));
-                    right:19px;
 
+                    right: 19px;
                 }
-                span:last-of-type{
-                    @include prefixes(transform, rotateZ(45deg));
-                    right: 11px;
 
+                span:last-of-type {
+                    @include prefixes(transform, rotateZ(45deg));
+
+                    right: 11px;
                 }
             }
-            .arrow:last-of-type{
+
+            .arrow:last-of-type {
                 position: relative;
                 top: 5px;
-                animation: Down-Up-Arrow 1s linear infinite alternate-reverse ;
-                span:first-of-type{
+                animation: Down-Up-Arrow 1s linear infinite alternate-reverse;
+
+                span:first-of-type {
                     @include prefixes(transform, rotateZ(-45deg));
-                    right:22px;
+
+                    right: 22px;
                 }
-                span:last-of-type{
+
+                span:last-of-type {
                     @include prefixes(transform, rotateZ(45deg));
+
                     right: 8px;
                 }
             }
@@ -162,20 +193,18 @@ header.header {
 }
 
 @keyframes Down-Up-Arrow {
-    to{
+    to {
         top: 17px;
     }
 }
 
-
-.under_header{
+.under_header {
     flex-direction: column;
     margin-top: 100px;
     gap: 50px 0;
-    i{
+
+    i {
         font-size: 76px;
         color: var(--bg-color-1);
     }
-
 }
-
