add space between the dark mode toggle button and navbar icon

--- a/css/index.css
+++ b/css/index.css
@@ -405,7 +405,7 @@ header.header .nav__icons {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 6%;
+  width: 70px;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
